--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body ng-app="myApp">
-  <div ng-controller="GooglePainationCtrl">
-    <pagination total-items="totalItems" model-"currenetPage"></pagination>
+  <div ng-controller="GooglePaginationCtrl">
+    <pagination total-items="totalItems" ng-model="currentPage"></pagination>
   </div>
 
 <script src="bower_components/angular/angular.js"></script>
